--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Django==1.6.4
+PyYAML==3.11
 amqp==1.4.5
 anyjson==0.3.3
 billiard==3.3.0.17
@@ -8,10 +9,12 @@ dj-static==0.0.5
 django-toolbelt==0.0.1
 gunicorn==18.0
 kombu==3.0.16
+nltk==2.0.4
 numpy==1.8.1
 psycopg2==2.5.2
 pystache==0.5.3
 pytz==2014.2
 scikit-learn==0.14.1
+scipy==0.14.0
 static==1.0.2
 wsgiref==0.1.2
